Footer alignment fix

--- a/src/assets/styles/components/_screen.scss
+++ b/src/assets/styles/components/_screen.scss
@@ -135,7 +135,7 @@
     max-width: 300px;
     margin-left: auto;
     margin-right: 40px;
-    padding-bottom: 40px;
+    padding-bottom: 30px;
     &-inner {
       display: flex;
       margin-top: 20px;
